@@ -960,131 +960,24 @@ init|(
 name|updateLock
 init|)
 block|{
-if|if
-condition|(
-name|this
-operator|.
-name|writer
-operator|!=
-literal|null
-condition|)
-block|{
-comment|// Close the current writer, get a new one.
-try|try
-block|{
-name|this
-operator|.
-name|writer
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|// Failed close of log file.  Means we're losing edits.  For now,
-comment|// shut ourselves down to minimize loss.  Alternative is to try and
-comment|// keep going.  See HBASE-930.
-name|FailedLogCloseException
-name|flce
-init|=
-operator|new
-name|FailedLogCloseException
-argument_list|(
-literal|"#"
-operator|+
-name|this
-operator|.
-name|filenum
-argument_list|)
-decl_stmt|;
-name|flce
-operator|.
-name|initCause
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-throw|throw
-name|e
-throw|;
-block|}
+comment|// Clean up current writer.
 name|Path
-name|p
+name|oldFile
 init|=
-name|computeFilename
-argument_list|(
-name|old_filenum
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|LOG
-operator|.
-name|isDebugEnabled
+name|cleanupCurrentWriter
 argument_list|()
-condition|)
-block|{
-name|LOG
-operator|.
-name|debug
-argument_list|(
-literal|"Closing current log writer "
-operator|+
-name|FSUtils
-operator|.
-name|getPath
-argument_list|(
-name|p
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|filenum
-operator|>
-literal|0
-condition|)
-block|{
-synchronized|synchronized
-init|(
+decl_stmt|;
+comment|// Create a new one.
 name|this
 operator|.
-name|sequenceLock
-init|)
-block|{
-name|this
-operator|.
-name|outputfiles
-operator|.
-name|put
-argument_list|(
-name|Long
-operator|.
-name|valueOf
-argument_list|(
-name|this
-operator|.
-name|logSeqNum
-operator|-
-literal|1
-argument_list|)
-argument_list|,
-name|p
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
 name|old_filenum
 operator|=
+name|this
+operator|.
 name|filenum
 expr_stmt|;
+name|this
+operator|.
 name|filenum
 operator|=
 name|System
@@ -1097,6 +990,8 @@ name|newPath
 init|=
 name|computeFilename
 argument_list|(
+name|this
+operator|.
 name|filenum
 argument_list|)
 decl_stmt|;
@@ -1138,7 +1033,27 @@ name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"New log writer created at "
+operator|(
+name|oldFile
+operator|!=
+literal|null
+condition|?
+literal|"Closed "
+operator|+
+name|oldFile
+operator|+
+literal|", entries="
+operator|+
+name|this
+operator|.
+name|numEntries
+operator|+
+literal|". "
+else|:
+literal|""
+operator|)
+operator|+
+literal|"New log writer: "
 operator|+
 name|FSUtils
 operator|.
@@ -1226,6 +1141,43 @@ argument_list|()
 expr_stmt|;
 block|}
 else|else
+block|{
+name|cleanOldLogs
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+name|this
+operator|.
+name|numEntries
+operator|=
+literal|0
+expr_stmt|;
+name|updateLock
+operator|.
+name|notifyAll
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|this
+operator|.
+name|cacheFlushLock
+operator|.
+name|unlock
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+comment|/*    * Clean up old commit logs.    * @throws IOException    */
+specifier|private
+name|void
+name|cleanOldLogs
+parameter_list|()
+throws|throws
+name|IOException
 block|{
 comment|// Get oldest edit/sequence id.  If logs are older than this id,
 comment|// then safe to remove.
@@ -1346,21 +1298,6 @@ expr_stmt|;
 break|break;
 block|}
 block|}
-if|if
-condition|(
-name|LOG
-operator|.
-name|isDebugEnabled
-argument_list|()
-operator|&&
-name|sequenceNumbers
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
 name|LOG
 operator|.
 name|debug
@@ -1374,7 +1311,18 @@ argument_list|()
 operator|+
 literal|" logs to remove "
 operator|+
-literal|"using oldest outstanding seqnum of "
+literal|" out of total "
+operator|+
+name|this
+operator|.
+name|outputfiles
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|"; "
+operator|+
+literal|"oldest outstanding seqnum is "
 operator|+
 name|oldestOutstandingSeqNum
 operator|+
@@ -1388,7 +1336,6 @@ name|oldestRegion
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 if|if
 condition|(
@@ -1425,30 +1372,119 @@ expr_stmt|;
 block|}
 block|}
 block|}
-block|}
+comment|/*    * Cleans up current writer closing and adding to outputfiles.    * Presumes we're operating inside an updateLock scope.    * @return Path to current writer or null if none.    * @throws IOException    */
+specifier|private
+name|Path
+name|cleanupCurrentWriter
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Path
+name|oldFile
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
 name|this
 operator|.
-name|numEntries
-operator|=
-literal|0
-expr_stmt|;
-name|updateLock
-operator|.
-name|notifyAll
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-finally|finally
+name|writer
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// Close the current writer, get a new one.
+try|try
 block|{
 name|this
 operator|.
-name|cacheFlushLock
+name|writer
 operator|.
-name|unlock
+name|close
 argument_list|()
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// Failed close of log file.  Means we're losing edits.  For now,
+comment|// shut ourselves down to minimize loss.  Alternative is to try and
+comment|// keep going.  See HBASE-930.
+name|FailedLogCloseException
+name|flce
+init|=
+operator|new
+name|FailedLogCloseException
+argument_list|(
+literal|"#"
+operator|+
+name|this
+operator|.
+name|filenum
+argument_list|)
+decl_stmt|;
+name|flce
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|e
+throw|;
+block|}
+name|oldFile
+operator|=
+name|computeFilename
+argument_list|(
+name|old_filenum
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|filenum
+operator|>
+literal|0
+condition|)
+block|{
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|sequenceLock
+init|)
+block|{
+name|this
+operator|.
+name|outputfiles
+operator|.
+name|put
+argument_list|(
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|this
+operator|.
+name|logSeqNum
+operator|-
+literal|1
+argument_list|)
+argument_list|,
+name|oldFile
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+name|oldFile
+return|;
 block|}
 specifier|private
 name|void
@@ -2470,21 +2506,25 @@ name|column
 argument_list|)
 return|;
 block|}
-comment|/**    * Split up a bunch of log files, that are no longer being written to, into    * new files, one per region. Delete the old log files when finished.    *    * @param rootDir qualified root directory of the HBase instance    * @param srcDir Directory of log files to split: e.g.    *<code>${ROOTDIR}/log_HOST_PORT</code>    * @param fs FileSystem    * @param conf HBaseConfiguration    * @throws IOException    */
+comment|/**    * Split up a bunch of regionserver commit log files that are no longer    * being written to, into new files, one per region for region to replay on    * startup. Delete the old log files when finished.    *    * @param rootDir qualified root directory of the HBase instance    * @param srcDir Directory of log files to split: e.g.    *<code>${ROOTDIR}/log_HOST_PORT</code>    * @param fs FileSystem    * @param conf HBaseConfiguration    * @throws IOException    */
 specifier|public
 specifier|static
 name|void
 name|splitLog
 parameter_list|(
+specifier|final
 name|Path
 name|rootDir
 parameter_list|,
+specifier|final
 name|Path
 name|srcDir
 parameter_list|,
+specifier|final
 name|FileSystem
 name|fs
 parameter_list|,
+specifier|final
 name|Configuration
 name|conf
 parameter_list|)
@@ -2506,8 +2546,8 @@ comment|// Nothing to do
 return|return;
 block|}
 name|FileStatus
-name|logfiles
 index|[]
+name|logfiles
 init|=
 name|fs
 operator|.
@@ -2536,7 +2576,7 @@ name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"splitting "
+literal|"Splitting "
 operator|+
 name|logfiles
 operator|.
@@ -2550,6 +2590,105 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|splitLog
+argument_list|(
+name|rootDir
+argument_list|,
+name|logfiles
+argument_list|,
+name|fs
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|srcDir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|e
+operator|=
+name|RemoteExceptionHandler
+operator|.
+name|checkIOException
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+name|IOException
+name|io
+init|=
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot delete: "
+operator|+
+name|srcDir
+argument_list|)
+decl_stmt|;
+name|io
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|io
+throw|;
+block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"log file splitting completed for "
+operator|+
+name|srcDir
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/*    * @param rootDir    * @param logfiles    * @param fs    * @param conf    * @throws IOException    */
+specifier|private
+specifier|static
+name|void
+name|splitLog
+parameter_list|(
+specifier|final
+name|Path
+name|rootDir
+parameter_list|,
+specifier|final
+name|FileStatus
+index|[]
+name|logfiles
+parameter_list|,
+specifier|final
+name|FileSystem
+name|fs
+parameter_list|,
+specifier|final
+name|Configuration
+name|conf
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|Map
 argument_list|<
 name|byte
@@ -3181,67 +3320,6 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-try|try
-block|{
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|srcDir
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-name|e
-operator|=
-name|RemoteExceptionHandler
-operator|.
-name|checkIOException
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-name|IOException
-name|io
-init|=
-operator|new
-name|IOException
-argument_list|(
-literal|"Cannot delete: "
-operator|+
-name|srcDir
-argument_list|)
-decl_stmt|;
-name|io
-operator|.
-name|initCause
-argument_list|(
-name|e
-argument_list|)
-expr_stmt|;
-throw|throw
-name|io
-throw|;
-block|}
-name|LOG
-operator|.
-name|info
-argument_list|(
-literal|"log file splitting completed for "
-operator|+
-name|srcDir
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 comment|/**    * Construct the HLog directory name    *     * @param info HServerInfo for server    * @return the HLog directory name    */
 specifier|public
